src/parser/TheLangParser.java
// $ANTLR 3.4 /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g 2011-11-24 00:06:03

    package parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class TheLangParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "COLON", "DIV", "DO", "ELSE", "END", "EQ", "FALSE", "FI", "GE", "GT", "IDENTIFIER", "IF", "INT", "INTEGER", "LBRACE", "LBRACKET", "LE", "LETTER", "LPAREN", "LT", "MINUS", "MUL", "NEQ", "NOT", "OD", "OR", "PLUS", "PROGRAM", "RBRACE", "RBRACKET", "READ", "ROOT", "RPAREN", "SEMI", "SKIP", "THEN", "TRUE", "UNIT", "WHILE", "WRITE", "WS"
    };

    public static final int EOF=-1;
    public static final int AND=4;
    public static final int ASSIGN=5;
    public static final int COLON=6;
    public static final int DIV=7;
    public static final int DO=8;
    public static final int ELSE=9;
    public static final int END=10;
    public static final int EQ=11;
    public static final int FALSE=12;
    public static final int FI=13;
    public static final int GE=14;
    public static final int GT=15;
    public static final int IDENTIFIER=16;
    public static final int IF=17;
    public static final int INT=18;
    public static final int INTEGER=19;
    public static final int LBRACE=20;
    public static final int LBRACKET=21;
    public static final int LE=22;
    public static final int LETTER=23;
    public static final int LPAREN=24;
    public static final int LT=25;
    public static final int MINUS=26;
    public static final int MUL=27;
    public static final int NEQ=28;
    public static final int NOT=29;
    public static final int OD=30;
    public static final int OR=31;
    public static final int PLUS=32;
    public static final int PROGRAM=33;
    public static final int RBRACE=34;
    public static final int RBRACKET=35;
    public static final int READ=36;
    public static final int ROOT=37;
    public static final int RPAREN=38;
    public static final int SEMI=39;
    public static final int SKIP=40;
    public static final int THEN=41;
    public static final int TRUE=42;
    public static final int UNIT=43;
    public static final int WHILE=44;
    public static final int WRITE=45;
    public static final int WS=46;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public TheLangParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public TheLangParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[49+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return TheLangParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g"; }


    public static class aexpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "aexpr"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:74:1: aexpr : aexpr1 ( PLUS ^ aexpr1 | MINUS ^ aexpr1 )* ;
    public final TheLangParser.aexpr_return aexpr() throws RecognitionException {
        TheLangParser.aexpr_return retval = new TheLangParser.aexpr_return();
        retval.start = input.LT(1);

        int aexpr_StartIndex = input.index();

        CommonTree root_0 = null;

        Token PLUS2=null;
        Token MINUS4=null;
        TheLangParser.aexpr1_return aexpr11 =null;

        TheLangParser.aexpr1_return aexpr13 =null;

        TheLangParser.aexpr1_return aexpr15 =null;


        CommonTree PLUS2_tree=null;
        CommonTree MINUS4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:74:7: ( aexpr1 ( PLUS ^ aexpr1 | MINUS ^ aexpr1 )* )
            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:74:9: aexpr1 ( PLUS ^ aexpr1 | MINUS ^ aexpr1 )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_aexpr1_in_aexpr433);
            aexpr11=aexpr1();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr11.getTree());

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:74:16: ( PLUS ^ aexpr1 | MINUS ^ aexpr1 )*
            loop1:
            do {
                int alt1=3;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==PLUS) ) {
                    alt1=1;
                }
                else if ( (LA1_0==MINUS) ) {
                    alt1=2;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:74:17: PLUS ^ aexpr1
            	    {
            	    PLUS2=(Token)match(input,PLUS,FOLLOW_PLUS_in_aexpr436); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    PLUS2_tree = 
            	    (CommonTree)adaptor.create(PLUS2)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(PLUS2_tree, root_0);
            	    }

            	    pushFollow(FOLLOW_aexpr1_in_aexpr439);
            	    aexpr13=aexpr1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr13.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:74:32: MINUS ^ aexpr1
            	    {
            	    MINUS4=(Token)match(input,MINUS,FOLLOW_MINUS_in_aexpr443); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    MINUS4_tree = 
            	    (CommonTree)adaptor.create(MINUS4)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(MINUS4_tree, root_0);
            	    }

            	    pushFollow(FOLLOW_aexpr1_in_aexpr446);
            	    aexpr15=aexpr1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr15.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, aexpr_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "aexpr"


    public static class aexpr1_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "aexpr1"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:76:1: aexpr1 : aexpr2 ( MUL ^ aexpr2 | DIV ^ aexpr2 )* ;
    public final TheLangParser.aexpr1_return aexpr1() throws RecognitionException {
        TheLangParser.aexpr1_return retval = new TheLangParser.aexpr1_return();
        retval.start = input.LT(1);

        int aexpr1_StartIndex = input.index();

        CommonTree root_0 = null;

        Token MUL7=null;
        Token DIV9=null;
        TheLangParser.aexpr2_return aexpr26 =null;

        TheLangParser.aexpr2_return aexpr28 =null;

        TheLangParser.aexpr2_return aexpr210 =null;


        CommonTree MUL7_tree=null;
        CommonTree DIV9_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:76:8: ( aexpr2 ( MUL ^ aexpr2 | DIV ^ aexpr2 )* )
            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:76:10: aexpr2 ( MUL ^ aexpr2 | DIV ^ aexpr2 )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_aexpr2_in_aexpr1457);
            aexpr26=aexpr2();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr26.getTree());

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:76:17: ( MUL ^ aexpr2 | DIV ^ aexpr2 )*
            loop2:
            do {
                int alt2=3;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==MUL) ) {
                    alt2=1;
                }
                else if ( (LA2_0==DIV) ) {
                    alt2=2;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:76:18: MUL ^ aexpr2
            	    {
            	    MUL7=(Token)match(input,MUL,FOLLOW_MUL_in_aexpr1460); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    MUL7_tree = 
            	    (CommonTree)adaptor.create(MUL7)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(MUL7_tree, root_0);
            	    }

            	    pushFollow(FOLLOW_aexpr2_in_aexpr1463);
            	    aexpr28=aexpr2();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr28.getTree());

            	    }
            	    break;
            	case 2 :
            	    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:76:32: DIV ^ aexpr2
            	    {
            	    DIV9=(Token)match(input,DIV,FOLLOW_DIV_in_aexpr1467); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    DIV9_tree = 
            	    (CommonTree)adaptor.create(DIV9)
            	    ;
            	    root_0 = (CommonTree)adaptor.becomeRoot(DIV9_tree, root_0);
            	    }

            	    pushFollow(FOLLOW_aexpr2_in_aexpr1470);
            	    aexpr210=aexpr2();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr210.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, aexpr1_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "aexpr1"


    public static class aexpr2_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "aexpr2"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:78:1: aexpr2 : ( MINUS ^ aexpr3 | aexpr3 );
    public final TheLangParser.aexpr2_return aexpr2() throws RecognitionException {
        TheLangParser.aexpr2_return retval = new TheLangParser.aexpr2_return();
        retval.start = input.LT(1);

        int aexpr2_StartIndex = input.index();

        CommonTree root_0 = null;

        Token MINUS11=null;
        TheLangParser.aexpr3_return aexpr312 =null;

        TheLangParser.aexpr3_return aexpr313 =null;


        CommonTree MINUS11_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:78:8: ( MINUS ^ aexpr3 | aexpr3 )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==MINUS) ) {
                alt3=1;
            }
            else if ( (LA3_0==IDENTIFIER||LA3_0==INTEGER||LA3_0==LPAREN) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:78:10: MINUS ^ aexpr3
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    MINUS11=(Token)match(input,MINUS,FOLLOW_MINUS_in_aexpr2481); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS11_tree = 
                    (CommonTree)adaptor.create(MINUS11)
                    ;
                    root_0 = (CommonTree)adaptor.becomeRoot(MINUS11_tree, root_0);
                    }

                    pushFollow(FOLLOW_aexpr3_in_aexpr2484);
                    aexpr312=aexpr3();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr312.getTree());

                    }
                    break;
                case 2 :
                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:79:10: aexpr3
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_aexpr3_in_aexpr2495);
                    aexpr313=aexpr3();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr313.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, aexpr2_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "aexpr2"


    public static class aexpr3_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "aexpr3"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:82:1: aexpr3 : ( IDENTIFIER ( LBRACKET aexpr RBRACKET )? | INTEGER | LPAREN ! aexpr RPAREN !);
    public final TheLangParser.aexpr3_return aexpr3() throws RecognitionException {
        TheLangParser.aexpr3_return retval = new TheLangParser.aexpr3_return();
        retval.start = input.LT(1);

        int aexpr3_StartIndex = input.index();

        CommonTree root_0 = null;

        Token IDENTIFIER14=null;
        Token LBRACKET15=null;
        Token RBRACKET17=null;
        Token INTEGER18=null;
        Token LPAREN19=null;
        Token RPAREN21=null;
        TheLangParser.aexpr_return aexpr16 =null;

        TheLangParser.aexpr_return aexpr20 =null;


        CommonTree IDENTIFIER14_tree=null;
        CommonTree LBRACKET15_tree=null;
        CommonTree RBRACKET17_tree=null;
        CommonTree INTEGER18_tree=null;
        CommonTree LPAREN19_tree=null;
        CommonTree RPAREN21_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:82:8: ( IDENTIFIER ( LBRACKET aexpr RBRACKET )? | INTEGER | LPAREN ! aexpr RPAREN !)
            int alt5=3;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                alt5=1;
                }
                break;
            case INTEGER:
                {
                alt5=2;
                }
                break;
            case LPAREN:
                {
                alt5=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:82:10: IDENTIFIER ( LBRACKET aexpr RBRACKET )?
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    IDENTIFIER14=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_aexpr3511); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER14_tree = 
                    (CommonTree)adaptor.create(IDENTIFIER14)
                    ;
                    adaptor.addChild(root_0, IDENTIFIER14_tree);
                    }

                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:82:21: ( LBRACKET aexpr RBRACKET )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==LBRACKET) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:82:22: LBRACKET aexpr RBRACKET
                            {
                            LBRACKET15=(Token)match(input,LBRACKET,FOLLOW_LBRACKET_in_aexpr3514); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            LBRACKET15_tree = 
                            (CommonTree)adaptor.create(LBRACKET15)
                            ;
                            adaptor.addChild(root_0, LBRACKET15_tree);
                            }

                            pushFollow(FOLLOW_aexpr_in_aexpr3516);
                            aexpr16=aexpr();

                            state._fsp--;
                            if (state.failed) return retval;
                            if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr16.getTree());

                            RBRACKET17=(Token)match(input,RBRACKET,FOLLOW_RBRACKET_in_aexpr3518); if (state.failed) return retval;
                            if ( state.backtracking==0 ) {
                            RBRACKET17_tree = 
                            (CommonTree)adaptor.create(RBRACKET17)
                            ;
                            adaptor.addChild(root_0, RBRACKET17_tree);
                            }

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:83:10: INTEGER
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    INTEGER18=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_aexpr3531); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    INTEGER18_tree = 
                    (CommonTree)adaptor.create(INTEGER18)
                    ;
                    adaptor.addChild(root_0, INTEGER18_tree);
                    }

                    }
                    break;
                case 3 :
                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:84:10: LPAREN ! aexpr RPAREN !
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    LPAREN19=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_aexpr3542); if (state.failed) return retval;

                    pushFollow(FOLLOW_aexpr_in_aexpr3545);
                    aexpr20=aexpr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, aexpr20.getTree());

                    RPAREN21=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_aexpr3547); if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, aexpr3_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "aexpr3"


    public static class bexpr_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bexpr"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:87:1: bexpr : bexpr1 ( OR bexpr1 )* ;
    public final TheLangParser.bexpr_return bexpr() throws RecognitionException {
        TheLangParser.bexpr_return retval = new TheLangParser.bexpr_return();
        retval.start = input.LT(1);

        int bexpr_StartIndex = input.index();

        CommonTree root_0 = null;

        Token OR23=null;
        TheLangParser.bexpr1_return bexpr122 =null;

        TheLangParser.bexpr1_return bexpr124 =null;


        CommonTree OR23_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:87:7: ( bexpr1 ( OR bexpr1 )* )
            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:87:9: bexpr1 ( OR bexpr1 )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_bexpr1_in_bexpr564);
            bexpr122=bexpr1();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, bexpr122.getTree());

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:87:16: ( OR bexpr1 )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==OR) ) {
                    int LA6_2 = input.LA(2);

                    if ( (synpred9_TheLang()) ) {
                        alt6=1;
                    }


                }


                switch (alt6) {
            	case 1 :
            	    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:87:17: OR bexpr1
            	    {
            	    OR23=(Token)match(input,OR,FOLLOW_OR_in_bexpr567); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    OR23_tree = 
            	    (CommonTree)adaptor.create(OR23)
            	    ;
            	    adaptor.addChild(root_0, OR23_tree);
            	    }

            	    pushFollow(FOLLOW_bexpr1_in_bexpr569);
            	    bexpr124=bexpr1();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, bexpr124.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, bexpr_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "bexpr"


    public static class bexpr1_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bexpr1"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:90:1: bexpr1 : bexpr2 ( AND bexpr2 )* ;
    public final TheLangParser.bexpr1_return bexpr1() throws RecognitionException {
        TheLangParser.bexpr1_return retval = new TheLangParser.bexpr1_return();
        retval.start = input.LT(1);

        int bexpr1_StartIndex = input.index();

        CommonTree root_0 = null;

        Token AND26=null;
        TheLangParser.bexpr2_return bexpr225 =null;

        TheLangParser.bexpr2_return bexpr227 =null;


        CommonTree AND26_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:90:8: ( bexpr2 ( AND bexpr2 )* )
            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:90:10: bexpr2 ( AND bexpr2 )*
            {
            root_0 = (CommonTree)adaptor.nil();


            pushFollow(FOLLOW_bexpr2_in_bexpr1586);
            bexpr225=bexpr2();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, bexpr225.getTree());

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:90:17: ( AND bexpr2 )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==AND) ) {
                    int LA7_2 = input.LA(2);

                    if ( (synpred10_TheLang()) ) {
                        alt7=1;
                    }


                }


                switch (alt7) {
            	case 1 :
            	    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:90:18: AND bexpr2
            	    {
            	    AND26=(Token)match(input,AND,FOLLOW_AND_in_bexpr1589); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    AND26_tree = 
            	    (CommonTree)adaptor.create(AND26)
            	    ;
            	    adaptor.addChild(root_0, AND26_tree);
            	    }

            	    pushFollow(FOLLOW_bexpr2_in_bexpr1591);
            	    bexpr227=bexpr2();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, bexpr227.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, bexpr1_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "bexpr1"


    public static class bexpr2_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "bexpr2"
    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:93:1: bexpr2 : ( aexpr opr ^ aexpr | NOT ^ bexpr | TRUE | FALSE | LPAREN ! bexpr ^ RPAREN !);
    public final TheLangParser.bexpr2_return bexpr2() throws RecognitionException {
        TheLangParser.bexpr2_return retval = new TheLangParser.bexpr2_return();
        retval.start = input.LT(1);

        int bexpr2_StartIndex = input.index();

        CommonTree root_0 = null;

        Token NOT31=null;
        Token TRUE33=null;
        Token FALSE34=null;
        Token LPAREN35=null;
        Token RPAREN37=null;
        TheLangParser.aexpr_return aexpr28 =null;

        TheLangParser.opr_return opr29 =null;

        TheLangParser.aexpr_return aexpr30 =null;

        TheLangParser.bexpr_return bexpr32 =null;

        TheLangParser.bexpr_return bexpr36 =null;


        CommonTree NOT31_tree=null;
        CommonTree TRUE33_tree=null;
        CommonTree FALSE34_tree=null;
        CommonTree LPAREN35_tree=null;
        CommonTree RPAREN37_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return retval; }

            // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:93:8: ( aexpr opr ^ aexpr | NOT ^ bexpr | TRUE | FALSE | LPAREN ! bexpr ^ RPAREN !)
            int alt8=5;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
            case INTEGER:
            case MINUS:
                {
                alt8=1;
                }
                break;
            case LPAREN:
                {
                int LA8_4 = input.LA(2);

                if ( (synpred11_TheLang()) ) {
                    alt8=1;
                }
                else if ( (true) ) {
                    alt8=5;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 4, input);

                    throw nvae;

                }
                }
                break;
            case NOT:
                {
                alt8=2;
                }
                break;
            case TRUE:
                {
                alt8=3;
                }
                break;
            case FALSE:
                {
                alt8=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // /Users/showandtell/officina/ProgramAnalysis/src/parser/TheLang.g:93:10: aexpr opr ^ aexpr
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_aexpr_in_bexpr2609);
                    aexpr28=aexpr();
